--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,9 +15,9 @@ jobs:
         uses: actions/checkout@v3.0.2  # Replace with the latest specific version
 
       - name: Setup Node
-        uses: actions/setup-node@v3.1.1  # Replace with the latest specific version
-          with:
-          node-version: '20'
+        uses: actions/setup-node@v3.1.1
+        with:
+          node-version: '20'  # Correct indentation for 'with' block
 
       - name: Install dependencies
         uses: bahmutov/npm-install@v1
