--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "eye-test",
+  "homepage":"https://obi-dan66.github.io/eye-test-deploy/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
