--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
+    "dotenv": "^16.4.5",
     "glob": "^10.4.1",
     "lru-cache": "^10.2.2",
     "react": "^18.3.1",
