--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "env": "^0.0.2",
     "express": "^4.19.2",
     "glob": "^10.4.1",
     "googleapis": "^140.0.1",
