--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.19.2",
     "glob": "^10.4.1",
     "googleapis": "^140.0.1",
+    "jwt-decode": "^4.0.0",
     "lru-cache": "^10.2.2",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
